[gd_scene load_steps=15 format=3 uid="uid://bgjgdbjea4y6i"]

[ext_resource type="Script" path="res://Enemies/Scenes/SkyLaser.gd" id="1_rluon"]
[ext_resource type="Texture2D" uid="uid://cyjwdc82h1r06" path="res://Assets/lazorsprites.png" id="1_tskt2"]
[ext_resource type="Texture2D" uid="uid://d3shwe0pcdfn7" path="res://Assets/warning.png" id="3_4h117"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ny5pj"]
atlas = ExtResource("1_tskt2")
region = Rect2(96, 0, 32, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwpu6"]
atlas = ExtResource("1_tskt2")
region = Rect2(128, 0, 32, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_at8ca"]
atlas = ExtResource("1_tskt2")
region = Rect2(160, 0, 32, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ub7t"]
atlas = ExtResource("1_tskt2")
region = Rect2(0, 0, 32, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnfk4"]
atlas = ExtResource("1_tskt2")
region = Rect2(32, 0, 32, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4daj"]
atlas = ExtResource("1_tskt2")
region = Rect2(64, 0, 32, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_hjwaf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny5pj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwpu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_at8ca")
}],
"loop": true,
"name": &"repeat",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ub7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnfk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4daj")
}],
"loop": false,
"name": &"start",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i7vfm"]
size = Vector2(30, 10)

[sub_resource type="Animation" id="Animation_q8mne"]
resource_name = "laserFadeAway"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1e-05),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.25, 1), Vector2(0, 1)]
}

[sub_resource type="Animation" id="Animation_7ilxb"]
resource_name = "new_animation"
length = 1.5
step = 0.005
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.78, 1.5),
"transitions": PackedFloat32Array(1, 0.307786, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.78),
"transitions": PackedFloat32Array(1, 0.25),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0q4s6"]
_data = {
"laserFadeAway": SubResource("Animation_q8mne"),
"new_animation": SubResource("Animation_7ilxb")
}

[node name="SkyLaser" type="Area2D" groups=["enemyBullet"]]
position = Vector2(-1, -129)
scale = Vector2(3, 3)
script = ExtResource("1_rluon")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hjwaf")
animation = &"start"
autoplay = "start"
frame = 2
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 43)
shape = SubResource("RectangleShape2D_i7vfm")
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.25
autostart = true

[node name="DeleteWarning" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(0, 44.6963)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("3_4h117")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0q4s6")
}

[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DeleteWarning" to="." method="_on_delete_warning_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
